# PrimiBlocks

./: .gitignore  CHANGELOG.md  CONTEXT.md  LICENSE  README.md  SOP.md  pyproject.toml
.github/workflows/: test.yml
docs/: RELEASE.md
docs/adr/: 0001-bundled-python-renderer-not-sc-compose.md  0002-primitives-carry-contracts-that-bubble-up.md
docs/diagrams/: README.md
docs/prd/: primiblocks-v1.md
issues/: 0001-project-scaffold-tracer-bullet-render.md  0002-contract-type-system.md  0003-contract-constraints.md  0004-primitives-discovery.md  0005-templates-effective-contract.md  0006-render-full.md  0007-cli-render-validate-json.md  0008-cli-lint-list-new-doctor.md  0009-reference-primitives.md  0010-reference-templates-vars-example.md  0011-primi-fill-skill.md  0012-primi-author-skill.md  0013-readme-and-2-diagrams.md  0014-sop-and-4-diagrams.md  0015-ci-cross-os-pytest-matrix.md  0016-github-repo-config-template-release.md  0017-reference-kit-smoke-test-ci.md
kit/: vars.example.json
kit/primitives/: few_shot_block.j2  guardrail_refusal.j2  output_format_json.j2  output_format_markdown.j2  retrieval_block.j2  system_persona.j2  task_instruction.j2  tool_use_examples.j2
kit/templates/: agent-tool-using-prompt.j2  eval-judge-prompt.j2  hello.j2  rag-qa-prompt.j2
primiblocks/: __init__.py  __main__.py  _frontmatter.py  cli.py  contract.py  errors.py  lint.py  primitives.py  render.py  scaffold.py  templates.py
tests/: test_cli.py  test_contract.py  test_primitives.py  test_reference_kit.py  test_render.py  test_templates.py  test_tracer.py
(+2 files in other folders)
